--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,1 +1,8 @@
-@import "tailwindcss"
+@import "tailwindcss";
+
+
+@theme {
+    --color-primary-foreground: hsl(210 40% 98%);
+    --color-foreground : hsl(222.2 84% 4.9%);
+    --color-primary : hsl(222.2 47.4% 11.2%);
+  }
